Fix navbar z-index

--- a/src/components/Navbar.module.scss
+++ b/src/components/Navbar.module.scss
@@ -44,6 +44,7 @@
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
+	z-index: 9999;
 
 	@include v.mq-max("medium") {
 		background-color: inherit;
